CSS+fix: remove another hard coded color + z-index++

--- a/css/bpm.scss
+++ b/css/bpm.scss
@@ -43,7 +43,7 @@
 		position: absolute;
 		box-sizing: border-box;
 		overflow: hidden;
-		z-index: 3;
+		z-index: 4;
 		left: -1px;
 		top: 100%;
 		width: 95px;
